<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/top_action_settings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/action_menu_settings"/>
    <item
        android:id="@+id/top_action_tutorial"
        android:title="@string/action_menu_replay_tutorial"/>

    <item
        android:id="@+id/top_action_filter"
        android:visible="true"
        android:title="@string/action_menu_filters">
        <menu>
            <item
                android:id="@+id/top_action_filter_title"
                android:title="@string/action_menu_filter_by_title"/>
            <item
                android:id="@+id/top_action_filter_date"
                android:title="@string/action_menu_filter_by_date"/>
            <item
                android:id="@+id/top_action_filter_distance"
                android:title="@string/action_menu_filter_by_distance"/>
            <item
                android:id="@+id/top_action_filter_category"
                android:title="@string/action_menu_filter_by_category"/>

        </menu>
    </item>

</menu>