<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.onBoards.FragOnBoardScreen1"
    android:background="@color/primaryColor">

    <ImageView
        android:id="@+id/im_board_3"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/on_board_user"
        app:layout_constraintBottom_toTopOf="@+id/tv_board_3_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        android:contentDescription="@string/on_board_activity_title_last_step"/>

    <TextView
        android:id="@+id/tv_board_3_heading"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/on_board_activity_title_last_step"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/secondaryColor"
        app:layout_constraintBottom_toTopOf="@+id/tv_board_3_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_board_3_text"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="12sp"
        android:text="@string/on_board_activity_message_last_step"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/et_on_board_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_on_board_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/on_board_activity_edit_text_last_step"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>